@@ -149,10 +149,11 @@ void RATabSheet::Generate()
 	}
 }
 
-void RATabSheet::CheckLaunch(BOOL fSkipPrompt /*= FALSE*/)
+void RATabSheet::CheckLaunch(BOOL fSkipPrompt)
 {
 	CString sFilename = _T("");
 	GetFilename(sFilename);
+
 	if ( sFilename.IsEmpty() )
 	{
 		return;
@@ -165,14 +166,14 @@ void RATabSheet::CheckLaunch(BOOL fSkipPrompt /*= FALSE*/)
 	if ( fSkipPrompt )
 	{
 		// only for when the Launch button is pressed
-		LaunchArduino();
+		LaunchArduino(sFilename);
 		return;
 	}
 
 	switch ( theApp.iLaunch )
 	{
 	case ALWAYS:
-		LaunchArduino();
+		LaunchArduino(sFilename);
 		break;
 	case PROMPT:
 		{
@@ -180,53 +181,13 @@ void RATabSheet::CheckLaunch(BOOL fSkipPrompt /*= FALSE*/)
 				MB_ICONINFORMATION | MB_YESNO);
 			if ( iRet == IDYES )
 			{
-				LaunchArduino();
+				LaunchArduino(sFilename);
 			}
 		}
 		break;
 	default:
 		break;
 	}
-}
-
-void RATabSheet::LaunchArduino()
-{
-	// use CreateProcess function to launch arduino
-	// use m_sArduinoFolder + arduino.exe for application
-	// use m_sSketchFolder + sketchfilename for PDE file to open
-	STARTUPINFO si;
-	PROCESS_INFORMATION pi;
-	TCHAR sPDE[32768];
-	CString sFilename;
-	CString sFileExtension;
-
-	if ( a_Controller.IsLatestDevVersion() )
-	{
-		sFileExtension.LoadString(IDS_INO_EXTENSION);
-	}
-	else
-	{
-		sFileExtension.LoadString(IDS_PDE_EXTENSION);
-	}
-
-	GetFilename(sFilename);
-	ZeroMemory(&si, sizeof(si));
-	si.cb = sizeof(si);
-	ZeroMemory(&pi, sizeof(pi));
-
-	_stprintf_s(sPDE, 32768, _T("%s\\arduino.exe \"%s\\%s\\%s%s\""), 
-			theApp.m_sArduinoDirectory, theApp.m_sSketchDirectory, sFilename, sFilename, sFileExtension);
-
-	if ( ! CreateProcess(NULL, sPDE, NULL, NULL, FALSE,
-						0, NULL, theApp.m_sArduinoDirectory,
-						&si, &pi) )
-	{
-		TRACE("Failed to launch arduino.exe\n");
-		AfxMessageBox(_T("Failed to launch arduino.exe"), MB_ICONINFORMATION|MB_OK);
-	}
-
-	CloseHandle(pi.hProcess);
-	CloseHandle(pi.hThread);
 }
 
 void RATabSheet::ResetAll()
